<?xml version="1.0"?>
<package format="2">
  <name>rover_control</name>
  <version>0.1.0</version>
  <description>MarsWorks main control package.</description>
  <maintainer email="aanabbas1@sheffield.ac.uk">Ahmed Abbas</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosserial_python</depend>
  <depend>joy</depend>
  <depend>rospy</depend>
</package>
