<?xml version="1.0"?>
<package format="2">
  <name>rover_control</name>
  <version>0.1.0</version>
  <description>MarsWorks main control package.</description>
  <maintainer email="aanabbas1@sheffield.ac.uk">Ahmed Abbas</maintainer>
  <license></license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>joy</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
</package>
